<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_short_name">FrostByte Launcher</string>
    <string name="login_online_username_hint">Username</string>
    <string name="login_online_login_label">Login</string>
    <string name="hint_control_mapping">Touch the cogwheel icon to open the context menu ⚙\nTap a button to customize: edit, resize, remove, or change its keybinds.</string>
    <string name="warning_remove_account">This account will be removed!</string>
    <string name="alerttitle_installmod">Select a mod installer</string>
    <string name="error_fatal">FrostByte Launcher has unexpectedly crashed</string>
    <string name="error_no_version">No version!</string>
    <string name="error_show_more">Show more</string>
    <string name="error_show_less">Show less</string>
    <string name="toast_permission_denied">The read/write to storage permission is required!</string>
    <string name="toast_optifine_success">Install successful</string>
    <string name="mcl_tab_wiki">Wiki</string>
    <string name="mcl_launch_cleancache">Cleaning cache files</string>
    <string name="mcl_launch_downloading">Downloading %s</string>
    <string name="mcl_launch_downloading_progress">"Downloading %s (%.2f MB / %.2f MB)"</string>
    <string name="mcl_launch_download_assets">Preparing to download resources</string>
    <string name="mcl_options">Options</string>
    <string name="mcl_option_customcontrol">Custom controls</string>
    <string name="perf_overlay_toggle">Toggle performance overlay</string>
    <string name="low_memory_warning">Device memory is critically low — consider closing background apps or lowering render distance</string>
    <string name="world_backups_title">World Backups</string>
    <string name="world_backups_worlds_header">Tap a world to back it up</string>
    <string name="world_backups_existing_header">Backups (tap to restore or delete)</string>
    <string name="world_backups_no_worlds">No worlds found</string>
    <string name="world_backups_no_backups">No backups yet</string>
    <string name="world_backups_confirm_title">Are you sure?</string>
    <string name="world_backups_confirm_message">Back up \"%1$s\" now?</string>
    <string name="world_backups_backup_success">Backup created</string>
    <string name="world_backups_backup_failed">Backup failed: %1$s</string>
    <string name="world_backups_action_restore">Restore</string>
    <string name="world_backups_action_delete">Delete backup</string>
    <string name="world_backups_restore_warning">This will overwrite the current \"%1$s\" world with this backup. This can\'t be undone. Continue?</string>
    <string name="world_backups_restore_success">World restored</string>
    <string name="world_backups_restore_failed">Restore failed: %1$s</string>
    <string name="world_backups_delete_warning">Delete this backup of \"%1$s\"? This can\'t be undone.</string>
    <string name="crash_history_title">Crash History</string>
    <string name="crash_history_empty">No crash reports yet</string>
    <string name="crash_history_action_view">View</string>
    <string name="crash_history_action_share">Share</string>
    <string name="crash_history_action_delete">Delete</string>
    <string name="crash_history_delete_warning">Delete this crash report? This can\'t be undone.</string>
    <string name="crash_history_read_failed">Couldn\'t read report: %1$s</string>
    <string name="crash_history_share_failed">Couldn\'t share report: %1$s</string>
    <string name="mcl_setting_title_use_surface_view">Use alternate surface rendering</string>
    <string name="mcl_setting_subtitle_use_surface_view">May help performance in GPU bound scenarios.</string>
    <string name="mcl_setting_title_ignore_notch">Ignore notch</string>
    <string name="mcl_setting_subtitle_ignore_notch">Ignores the notch and extends the screen under it.\nGives you a more immersive experience.</string>
    <string name="mcl_setting_title_resolution_scaler">Resolution Scaler</string>
    <string name="mcl_setting_subtitle_resolution_scaler">Allows you to decrease the game resolution. 100% is full resolution.</string>
    <string name="mcl_setting_title_longpresstrigger">Trigger long press delay</string>
    <string name="mcl_setting_subtitle_longpresstrigger">Change long press trigger delay for destroying blocks and dropping items.</string>
    <string name="mcl_setting_title_buttonscale">Control buttons scaling</string>
    <string name="mcl_setting_subtitle_buttonscale">Upscale them if the buttons are too small.</string>
    <string name="mcl_setting_title_mousescale">Mouse scaling</string>
    <string name="mcl_setting_subtitle_mousescale">Change the size of the virtual mouse.</string>
    <string name="mcl_setting_title_javaargs">JVM Launch arguments</string>
    <string name="mcl_setting_subtitle_javaargs">Be careful, this may make game crash if modified without knowledge.</string>
    <string name="mcl_setting_category_renderer">Renderer</string>
    <string name="mcl_setting_renderer_gles2_4">Holy GL4ES - all versions till 1.21.4, fast</string>
    <string name="mcl_setting_renderer_vulkan_zink">Zink (Vulkan) - all versions, mid</string>
    <string name="mcl_setting_renderer_freedreno_kgsl">Freedreno - all versions, fast, Adreno-only</string>
    <string name="mcl_setting_renderer_ltw">LTW (OpenGL ES 3) - 1.17+ only, fast</string>
    <string name="mcl_setting_veroption_release">Release</string>
    <string name="mcl_setting_veroption_snapshot">Snapshot</string>
    <string name="mcl_setting_veroption_oldalpha">Old-alpha</string>
    <string name="mcl_setting_veroption_oldbeta">Old-beta</string>
    <string name="mcl_setting_java_sandbox">Sandbox .jar execution</string>
    <string name="mcl_setting_java_sandbox_subtitle">Control the availability of the sandbox security manager when executing a .jar file.</string>
    <string name="mcl_version_clone">Clone</string>
    <string name="global_edit">Edit</string>
    <string name="global_error">Error</string>
    <string name="global_load">Load</string>
    <string name="global_name">Name</string>
    <string name="global_remove">Remove</string>
    <string name="global_clone">Clone</string>
    <string name="global_restart">Restart</string>
    <string name="global_save">Save</string>
    <string name="global_unpacking">Unpacking %s</string>
    <string name="global_error_field_empty">This field can\'t be empty</string>
    <string name="global_waiting">Wait</string>
    <string name="global_select">Select</string>
    <string name="global_retry">Retry</string>
    <string name="global_default">Default</string>
    <string name="mcn_exit_title">Application/Game exited with code %d, check latestlog.txt for more details.</string>
    <string name="mcn_abort_title">Application/Game aborted, check latestlog.txt for more information</string>
    <string name="mcn_exit_confirm">Are you sure want to force close?</string>
    <string name="mcn_check_fail_vulkan_support">Zink (Vulkan) renderer is not supported on this device!</string>
    <string name="control_chat">Chat</string>
    <string name="control_debug">Debug</string>
    <string name="control_primary">Pri</string>
    <string name="control_secondary">Sec</string>
    <string name="control_shift">◇</string>
    <string name="control_inventory">Inv</string>
    <string name="control_up">▲</string>
    <string name="control_left">◀</string>
    <string name="control_right">▶</string>
    <string name="control_down">▼</string>
    <string name="control_jump">⬛</string>
    <string name="control_thirdperson">3rd</string>
    <string name="control_listplayers">Tab</string>
    <string name="control_mouse">Mouse</string>
    <string name="control_mouseoff">Mouse: off</string>
    <string name="control_mouseon">Mouse: on </string>
    <string name="control_forceclose">Force close</string>
    <string name="control_viewout">Log output</string>
    <string name="control_adebug">Input Debug</string>
    <string name="control_customkey">Send custom keycode</string>
    <string name="import_control_label">Import controls</string>
    <string name="import_control_invalid_file">Invalid or corrupted file</string>
    <string name="import_control_import_button">import controls</string>
    <string name="import_control_verifying_file">File is being verified, please wait and try again…</string>
    <string name="import_control_invalid_name">Invalid name or file already exists</string>
    <string name="import_control_done">Importation done</string>
    <string name="customctrl_toggle">Toggleable</string>
    <string name="customctrl_size">Size</string>
    <string name="customctrl_mapping">Mapping</string>
    <string name="customctrl_orientation">Orientation</string>
    <string name="customctrl_background_bitmap">Background image</string>
    <string name="customctrl_background_color">Background color</string>
    <string name="customctrl_background_color_warning">Changing background color will reset the background image</string>
    <string name="customctrl_corner_radius">Corner radius</string>
    <string name="customctrl_stroke_width">Stroke width</string>
    <string name="customctrl_stroke_color">Stroke color</string>
    <string name="customctrl_button_opacity">Button Opacity</string>
    <string name="customctrl_addbutton">Add button</string>
    <string name="customctrl_addbutton_drawer">Add button drawer</string>
    <string name="customctrl_addbutton_joystick">Add joystick</string>
    <string name="customctrl_addsubbutton">Add sub-button</string>
    <string name="mcl_memory_allocation">Memory allocation</string>
    <string name="mcl_memory_allocation_subtitle">Controls how much memory is given to the Java runtime.</string>
    <string name="multirt_title">Runtime Manager</string>
    <string name="multirt_subtitle">Manage installed Java Runtimes.</string>
    <string name="preference_video_title">Video and renderer</string>
    <string name="preference_video_description">Resolution, renderer and performance</string>
    <string name="preference_control_title">Control customization</string>
    <string name="preference_control_description">Gestures, buttons and scaling</string>
    <string name="preference_java_title">Java Tweaks</string>
    <string name="preference_java_description">Java Runtimes, JVM Arguments, RAM amount and sandbox</string>
    <string name="preference_misc_title">Miscellaneous settings</string>
    <string name="preference_misc_description">Version list and libraries check</string>
    <string name="preference_experimental_title">Experimental Stuff</string>
    <string name="preference_experimental_description">Use things there with consideration, no support</string>
    <string name="preference_force_english_title">Force language to English</string>
    <string name="preference_force_english_description">Allows you to see original strings, as intended by developers. Requires a restart.</string>
    <string name="preference_category_java_tweaks">Java Tweaks</string>
    <string name="preference_category_main_categories">Categories</string>
    <string name="preference_ask_for_notification_title">Allow notifications</string>
    <string name="preference_ask_for_notification_description">Click to re-request the notification permission, required for game/modpack background downloads to work properly.</string>
    <string name="skins_title">Skins &amp; Capes</string>
    <string name="skins_upload_from_gallery">Upload skin from gallery</string>
    <string name="skins_username_hint">Look up a player\'s skin by username</string>
    <string name="skins_search">Search</string>
    <string name="skins_gallery_title">Presets</string>
    <string name="skins_capes_title">Your capes</string>
    <string name="skins_slim_model">Slim arms (Alex model)</string>
    <string name="skins_reset">Reset to default</string>
</resources>