<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:key=""
    >

    <com.frostbyte.launcher.prefs.BackButtonPreference
        android:layout="@layout/frostbyte_preference_item"/>

    <PreferenceCategory
        android:title="@string/preference_category_main_categories"
        >

        <Preference
        android:layout="@layout/frostbyte_preference_item"
            android:key="video_screen_setting"
            android:title="@string/preference_video_title"
            android:summary="@string/preference_video_description"
            android:fragment="com.frostbyte.launcher.prefs.screens.LauncherPreferenceVideoFragment"
            android:icon="@drawable/ic_px_image"
            />

        <Preference
        android:layout="@layout/frostbyte_preference_item"
            android:key="control_screen_setting"
            android:title="@string/preference_control_title"
            android:summary="@string/preference_control_description"
            android:fragment="com.frostbyte.launcher.prefs.screens.LauncherPreferenceControlFragment"
            android:icon="@drawable/ic_px_gamepad"
            />

        <Preference
        android:layout="@layout/frostbyte_preference_item"
            android:key="java_screen_setting"
            android:title="@string/preference_java_title"
            android:summary="@string/preference_java_description"
            android:fragment="com.frostbyte.launcher.prefs.screens.LauncherPreferenceJavaFragment"
            android:icon="@drawable/ic_px_java"
            />

        <Preference
        android:layout="@layout/frostbyte_preference_item"
            android:key="misc_screen_setting"
            android:title="@string/preference_misc_title"
            android:summary="@string/preference_misc_description"
            android:fragment="com.frostbyte.launcher.prefs.screens.LauncherPreferenceMiscellaneousFragment"
            android:icon="@drawable/ic_px_alt_sliders"
            />


        <Preference
        android:layout="@layout/frostbyte_preference_item"
            android:key="experimental_screen_setting"
            android:title="@string/preference_experimental_title"
            android:summary="@string/preference_experimental_description"
            android:fragment="com.frostbyte.launcher.prefs.screens.LauncherPreferenceExperimentalFragment"
            android:icon="@drawable/ic_px_experiment"/>
    </PreferenceCategory>

    <SwitchPreference
        android:layout="@layout/frostbyte_preference_item"
        android:title="@string/preference_force_english_title"
        android:key="force_english"
        android:summary="@string/preference_force_english_description"
        android:icon="@drawable/ic_px_translate"/>

    <Preference
        android:layout="@layout/frostbyte_preference_item"
        android:title="@string/preference_ask_for_notification_title"
        android:summary="@string/preference_ask_for_notification_description"
        android:key="notification_permission_request"
        android:icon="@drawable/ic_px_bell"
        />





</PreferenceScreen>