<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app2="http://schemas.android.com/apk/res-auto">

    <com.frostbyte.launcher.prefs.BackButtonPreference
        android:layout="@layout/frostbyte_preference_item"/>

    <PreferenceCategory android:title="@string/preference_category_java_tweaks">
        <Preference
        android:layout="@layout/frostbyte_preference_item"
            android:key="install_jre"
            android:icon="@drawable/ic_px_runtime_mgr"
            android:persistent="false"
            android:summary="@string/multirt_subtitle"
            android:title="@string/multirt_title"/>

        <androidx.preference.EditTextPreference
        android:layout="@layout/frostbyte_preference_item"
            android:dialogTitle="@string/mcl_setting_title_javaargs"
            android:icon="@drawable/ic_px_console"
            android:key="javaArgs"
            android:singleLine="true"
            android:summary="@string/mcl_setting_subtitle_javaargs"
            android:title="@string/mcl_setting_title_javaargs" />

        <com.frostbyte.launcher.prefs.CustomSeekBarPreference
        android:layout="@layout/frostbyte_preference_seekbar"
            android:key="allocation"
            android:icon="@drawable/ic_px_ram"
            android:summary="@string/mcl_memory_allocation_subtitle"
            android:title="@string/mcl_memory_allocation"
            app2:showSeekBarValue="true"
            app2:min="@integer/memory_seekbar_min"
            app2:seekBarIncrement="@integer/memory_seekbar_increment"
            app2:selectable="false"/>

        <SwitchPreference
        android:layout="@layout/frostbyte_preference_item"
            android:defaultValue="true"
            android:icon="@drawable/ic_px_java_run"
            android:key="java_sandbox"
            android:summary="@string/mcl_setting_java_sandbox_subtitle"
            android:title="@string/mcl_setting_java_sandbox" />

    </PreferenceCategory>


</PreferenceScreen>